[package]
name = "bevypunk"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# ahash = "0.8.3"
# rand = "0.8.5"
# mathio = "0.2.1"

# bevy_lunex = "0.0.9"
bevy = { version = "0.12.0" }
bevy_aoui = {version = "0.2.0"}
bevy_aoui_widgets = {version = "0.2.0"}
